--- a/about.css
+++ b/about.css
@@ -4,8 +4,9 @@
     padding:0;
     box-sizing: border-box;
 }
+
 body{
-    overflow:hidden;
+overflow: hidden;
 }
 nav{
     width:100%;
@@ -13,6 +14,7 @@ nav{
     display:flex;
     align-items: center;
     justify-content: flex-start;
+  
     
 }
 .home{
@@ -45,7 +47,7 @@ flex-direction: column;
 .slider{
     width:100%;
     height:100vh;
-    background:#5184d1;
+    background:#73a8f8;
     position:fixed;
     top:0;
     transform:translateY(100%)
@@ -54,11 +56,17 @@ flex-direction: column;
     background-color: rgb(0, 0, 0);
     overflow:hidden;
 }
+main{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 #main1{
 
     width:100%;
-    height:93vh;
+    height:100vh;
     display:none;
     justify-content: center;
     align-items: center;
@@ -68,7 +76,7 @@ flex-direction: column;
 
 .welcome{
             width:60%;
-            height:50%;
+            height:100%;
             font-size: 32px;
             display:flex;
             justify-content: center;
@@ -78,10 +86,14 @@ flex-direction: column;
 
 
 .why{
-    margin-top: 2rem;
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    margin-top: 3rem;
     width:100%;
-    height:30vh;
-
+    height:100%;
+    overflow:hidden;
+ 
 }
 .maintext{
     margin-top: 30px;
@@ -97,7 +109,7 @@ flex-direction: column;
     margin-left:5px;
     font-family: 'Nunito Sans', sans-serif;
     font-size: 18px;
-    font-weight: 100;
+    font-weight: 300;
 }
 .trynowbutton{
     font-family: "Heebo";
@@ -139,4 +151,21 @@ flex-direction: column;
     font-size: 1rem;
 }
 
+}
+.imgdiv{
+    width: 30%;
+    height: 100%;
+}
+.imgdiv img{
+    width:100%;
+    height:80%;
+}
+.imgdiv h1{
+    text-align: center;
+    font-family: 'Finger Paint', cursive;
+}
+.main2{
+    width:100%;
+    height:100vh;
+    background-color: chartreuse;
 }
