--- a/about.css
+++ b/about.css
@@ -7,6 +7,7 @@
 
 body{
 overflow: hidden;
+
 }
 nav{
     width:100%;
@@ -32,6 +33,7 @@ position:absolute;
 top:0;
 left:0;
 display:flex;
+
 align-items: center;
 justify-content: center;
 flex-direction: column;
@@ -58,6 +60,7 @@ flex-direction: column;
 }
 main{
     display:flex;
+   
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -79,6 +82,7 @@ main{
             height:100%;
             font-size: 32px;
             display:flex;
+        
             justify-content: center;
             align-items: center;
             flex-direction: column;
@@ -93,7 +97,7 @@ main{
     width:100%;
     height:100%;
     overflow:hidden;
- 
+
 }
 .maintext{
     margin-top: 30px;
@@ -166,6 +170,152 @@ main{
 }
 .main2{
     width:100%;
-    height:100vh;
-    background-color: chartreuse;
+    height:1350px;
+    display:flex;
+    flex-direction: column;
+    justify-content:flex-start;
+    align-items: flex-end;
+
 }
+.svgcontainer{
+    width:45%;
+    height:70vh;
+    margin-left: 100px;
+
+
+}
+.svgcontainer svg{
+    width:100%;
+    height:100%;
+}
+.step1{
+    margin-left: 120px;
+    width:45%;
+    height:50vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+  
+}  
+.firstholder{
+    margin-top: 50px;
+    margin-top: 40px;
+    width:100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background: #f7f6f6;
+ 
+}
+
+.main3{
+    width:100%;
+    height:100vh;
+ display:flex;
+justify-content: center;
+ align-items: center;
+ flex-direction: column;
+ position:relative;
+
+
+}
+.rock{
+    z-index:2;
+}
+#instruct{
+        margin-bottom: 50px;
+        font-family: 'Nunito Sans', sans-serif;
+       font-size: 50px;
+}
+.progress{
+    position: absolute;
+    top:0;
+    left:0;
+    width:0%;
+    height:0.3rem;
+    background-color: #665DF5;
+    transition:all 0.5s ease;
+}
+.anim{
+width:100%;
+height:100%;
+   
+    
+}
+.calculation-heading{
+    position: absolute;
+    top:0;
+    left:50%;
+    transform:translateX(-50%);
+    font-size: 50px;
+    font-family:"Nunito Sans";
+    font-weight: bolder;
+}
+.wpm-wrapper{
+    width:700px;
+    height:30vh;
+ display: flex;
+ justify-content: center;
+ align-items: flex-start;
+}
+.accuracy-wrapper{
+    width:700px;
+    height:30vh;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+footer{
+    width:100%;
+    height:20vh;
+    background: rosybrown;
+}
+.wpm{
+height:80%;
+width:25%;
+border-right: 3px solid black;
+display:flex;
+justify-content: center;
+align-items: center;
+overflow:hidden
+}
+.wpmex{
+    height:80%;
+    width:70%;
+    display:flex;
+justify-content: center;
+align-items: center;
+margin-left: 20px;
+overflow:hidden
+}
+.acc{
+    height:80%;
+    width:25%;
+    display:flex;
+justify-content: center;
+align-items: center;
+border-right: 3px solid black;
+overflow:hidden
+}.accex{
+    height:80%;
+        width:70%;
+        margin-left: 20px;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        overflow:hidden
+    }
+    .wpm h3,.acc h3{
+        font-family: "Nunito Sans";
+        font-size: 32px;
+    }
+   .wpmex h3,.accex h3{
+       font-family: "Nunito Sans";
+       font-weight: normal;
+       font-size: 18px;
+   }
+   .wpmex a{
+       text-decoration: none;
+       color:rgba(0, 0, 255, 0.753)
+   }
