--- a/style.css
+++ b/style.css
@@ -332,59 +332,116 @@ align-items: center;
 z-index: 1;
 ;
 }
-.orginalanalysis{
-  width:55%;
-  height:70%;
-  background-color:rgb(241, 241, 241);
-  border-radius:1.5rem;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  position:relative;
-}
-.close {
-  color: #191a19;
-  position:absolute;
-  top:0;
-  left:95%;
-  font-size: 32px;
-  font-weight: bold;
-  margin-right: 2rem;
-}
-
-.close:hover,
-.close:focus {
-  color: rgb(212, 34, 34);
-  text-decoration: none;
-  cursor: pointer;
-}
-.resultmodal{
-  width:90%;
-  height:90% ;
-  overflow:auto;
-}
-.modaltable{
-  font-family: 'Oxygen', sans-serif;
-  font-weight: 400;
-  margin-top: 5px;
-  width:100%;
-  border-collapse: collapse;
-  border-radius: 1.5rem;
-  font-size: 1.3rem;
-}    
-
-.resultmodal td{ 
-  border:3px solid #D7D9E1;
-  text-align: center;
-  border-collapse: collapse;
-  padding:1.3rem 3rem;
-  text-align: center;
-  color:black
-
-}
 a:hover{
   opacity:0.6;
 }
 .links:hover{
   opacity:0.6; 
+}
+.modal{
+  width:55%;
+  height:70%;
+ background-color: white;
+  border-radius: 0.5rem;
+  position: relative;
+  display:flex;
+  align-items: center;
+  justify-content:space-evenly;
+  flex-direction: column;
+  box-shadow: 5px 5px 5px #cdc3f3;
+}
+.modalclosebutton{
+  position: absolute;
+  top:5px;
+  right:15px;
+  font-size: 2rem;
+  cursor:pointer;
+  font-weight: bolder;
+}
+.modalimgdiv{
+  width: 75%;
+  height: 60%;
+
+}
+.svgholder{
+  width:100%;
+  height:100%;
+  overflow: hidden;
+ 
+}
+.svgholder svg{
+  width:100%;
+  height: 100%;
+}
+.modalresults{
+  width: 75%;
+  height:25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modalclosebutton:hover{
+
+  color:magenta
+}
+#modaljoysvg{
+  display:none;
+}
+#modalsadsvg{
+  display:none;
+
+}
+#modalhappysvg{
+  display:none;
+}
+/*#emojicolor{
+  animation-name:emojicolor;
+  animation-duration:10s;
+  animation-timing-function: ease-in-out;
+ animation-iteration-count: infinite;
+ transition: all 0.4s ease 0s;
+}
+@keyframes emojicolor{
+  20%{
+    fill:#FF0000;
+  }
+  50%{
+    fill:#E432F3;
+
+  }
+  90%{
+    fill:#6C63FF;
+  }
+}
+*/
+#bg{
+  transform-origin:50% 50% ;
+}
+#floor{
+  transform-origin:50% 50% ;
+}
+.oogabooga{
+  font-family:redressed;
+  font-size: 4.3rem;
+  font-weight: bolder;
+}
+#modalresultsid{
+  font-weight:100;
+  font-family: mulish;
+}
+.oogabooga:hover{
+  opacity:0.7;
+}
+.ooga2{
+opacity:0.2;
+color:rgb(65, 98, 247);
+
+}
+.oogastyle{
+  font-family:redressed;
+  font-size: 4.3rem;
+  opacity:1;
+  color:rgb(65, 98, 247);
+  
+  
 }
