--- a/about.css
+++ b/about.css
@@ -33,7 +33,6 @@ position:absolute;
 top:0;
 left:0;
 display:flex;
-
 align-items: center;
 justify-content: center;
 flex-direction: column;
@@ -60,7 +59,6 @@ flex-direction: column;
 }
 main{
     display:flex;
-   
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -82,7 +80,6 @@ main{
             height:100%;
             font-size: 32px;
             display:flex;
-        
             justify-content: center;
             align-items: center;
             flex-direction: column;
@@ -137,25 +134,6 @@ main{
     align-items: center;
     flex-direction: column;
 }
-@media only screen and (max-width:600px){
-    .maintext{
-        font-size: 32px;
-    }
-    .explanation{
-        font-size: 10px;
-    }
-.trynowbutton{
-    font-size: 1rem;
-    padding: 5px 10px;
-}
-.loadingscreen{
-    font-size: 1rem;
-}
-.loadingscreen span{
-    font-size: 1rem;
-}
-
-}
 .imgdiv{
     width: 30%;
     height: 100%;
@@ -170,7 +148,7 @@ main{
 }
 .main2{
     width:100%;
-    height:1350px;
+    height:1450px;
     display:flex;
     flex-direction: column;
     justify-content:flex-start;
@@ -196,6 +174,7 @@ main{
     justify-content: center;
     align-items: center;
   
+  
 }  
 .firstholder{
     margin-top: 50px;
@@ -204,6 +183,7 @@ main{
     display:flex;
     justify-content: center;
     align-items: center;
+  
     background: #f7f6f6;
  
 }
@@ -265,11 +245,15 @@ height:100%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
+  
 }
 footer{
     width:100%;
     height:20vh;
-    background: rosybrown;
+    background: rgb(238, 196, 196);
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 .wpm{
 height:80%;
@@ -278,6 +262,7 @@ border-right: 3px solid black;
 display:flex;
 justify-content: center;
 align-items: center;
+flex-wrap: wrap;
 overflow:hidden
 }
 .wpmex{
@@ -287,6 +272,7 @@ overflow:hidden
 justify-content: center;
 align-items: center;
 margin-left: 20px;
+flex-wrap: wrap;
 overflow:hidden
 }
 .acc{
@@ -296,7 +282,8 @@ overflow:hidden
 justify-content: center;
 align-items: center;
 border-right: 3px solid black;
-overflow:hidden
+overflow:hidden;
+flex-wrap: wrap;
 }.accex{
     height:80%;
         width:70%;
@@ -304,7 +291,8 @@ overflow:hidden
         display:flex;
         justify-content: center;
         align-items: center;
-        overflow:hidden
+        overflow:hidden;
+      
     }
     .wpm h3,.acc h3{
         font-family: "Nunito Sans";
@@ -319,3 +307,68 @@ overflow:hidden
        text-decoration: none;
        color:rgba(0, 0, 255, 0.753)
    }
+
+
+
+
+
+
+
+
+
+
+   @media only screen and (max-width:600px){
+    .maintext{
+        font-size: 32px;
+    }
+    .welcome{
+        width:100vw
+    }
+    .explanation{
+        width:100%
+    }
+.trynowbutton{
+    font-size: 1rem;
+    padding: 5px 10px;
+}
+.loadingscreen{
+    font-size: 1rem;
+}
+.loadingscreen span{
+    font-size: 1rem;
+}
+
+.imgdiv h1{
+    font-size: 20px;
+}
+.wpmex{
+    width:30%
+}
+.accex{ 
+width:30%
+}
+.wpm-wrapper{
+    width:100%;
+    height:40vh;
+
+}
+.accuracy-wrapper{
+    width: 100%;
+    height:40vh
+}
+.wpm h3,.acc h3{
+    font-family: "Nunito Sans";
+    font-size: 20px;
+}
+.wpmex h3,.accex h3{
+   font-family: "Nunito Sans";
+   font-weight: normal;
+   font-size: 16px;
+}
+
+}
+.footertxt{
+    font-family: "Nunito Sans";
+    font-size: 32px;
+    cursor: pointer;
+}
