--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ justify-content: space-between;
     padding:0.1rem 1.5rem;
     font-size:1.4rem;
     width:10rem;
-    
 }
 
 .links{
@@ -251,6 +250,7 @@ svg{
   height:100%;
   position:relative;
 }
+
 .sample{
   width:38%;
   height:50%;
@@ -305,7 +305,6 @@ left:0;
 justify-content: center;
 align-items: center;
 z-index: 1;
-;
 }
 a:hover{
   opacity:0.6;
@@ -323,7 +322,7 @@ a:hover{
   align-items: center;
   justify-content:space-evenly;
   flex-direction: column;
-  box-shadow: 3px 3px 10px #0a0a0a;
+  box-shadow: 3px 3px 3px #636161;
 }
 .modalclosebutton{
   position: absolute;
@@ -419,4 +418,19 @@ color:rgb(65, 98, 247);
   color:rgb(65, 98, 247);
   
   
+}
+
+.highwpm{
+  width:500px;
+  height:300px;
+  position: fixed;
+  top:63%;
+  left:35%;
+  border-radius: 1%;
+  display:none;
+  background: white;
+}
+.highwpmsvg{
+  width:100%;
+  height:100%;
 }
